// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DirectLinks /> renders additional links on phone 1`] = `
<DocumentFragment>
  <div
    class="DirectLinks"
    id="DirectLinks"
  >
    <h3
      class="Heading Heading__large"
      id="DirectLinksHeader"
    >
      Bezoek ook
    </h3>
    <ul
      class="LinkList"
    />
  </div>
</DocumentFragment>
`;

exports[`<DirectLinks /> renders commercial links 1`] = `
<DocumentFragment>
  <div
    class="DirectLinks"
    id="DirectLinks"
  >
    <h3
      class="Heading Heading__large"
      id="DirectLinksHeader"
    >
      Bezoek ook
    </h3>
    <ul
      class="LinkList"
    >
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="/uitleg"
          id="Uitleg"
        >
          Dit ziet u in Mijn Amsterdam
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/sbl/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Stadsbank van Lening
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/veelgevraagd/?productid={68422ECA-8C56-43EC-A9AA-B3DF190B5077}"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Veelgestelde vragen
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.digitaleoverheid.nl/dossiers/movo-mijn-overheid-voor-ondernemers/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          MijnOverheid voor ondernemers
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Amsterdam.nl
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/parkeren-verkeer/taxi/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Taxiportaal
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/parkeren-verkeer/varen-amsterdam/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Varen in Amsterdam
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<DirectLinks /> renders private links 1`] = `
<DocumentFragment>
  <div
    class="DirectLinks"
    id="DirectLinks"
  >
    <h3
      class="Heading Heading__large"
      id="DirectLinksHeader"
    >
      Bezoek ook
    </h3>
    <ul
      class="LinkList"
    >
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/sbl/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Stadsbank van Lening
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/veelgevraagd/?productid={68422ECA-8C56-43EC-A9AA-B3DF190B5077}"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Veelgestelde vragen
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://mijn.overheid.nl/berichtenbox/inbox/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          MijnOverheid Berichtenbox
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Amsterdam.nl
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/parkeren-verkeer/taxi/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Taxiportaal
        </a>
      </li>
      <li>
        <a
          class="Button Button__plain Button__lean Linkd"
          href="https://www.amsterdam.nl/parkeren-verkeer/varen-amsterdam/"
          rel="external noopener noreferrer"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            External-Link.svg
          </svg>
          Varen in Amsterdam
        </a>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
